--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,17 @@
     <string name="title_activity_login_screen">LoginScreen</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    <string name="second_fragment_label">Forgot Password</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="select_state">State</string>
+    <string-array name="state" >
+        <item >State</item>
+        <item >Karnataka</item>
+        <item >Delhi</item>
+        <item >Mumbai</item>
+    </string-array>
 </resources>
