--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Compare_My_Trade</string>
+    <string name="app_name">Compare My Trade</string>
     <string name="title_activity_login_screen">LoginScreen</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -10,17 +10,18 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="select_state">State</string>
-    <string-array name="state" >
-        <item >State</item>
-        <item >Karnataka</item>
-        <item >Delhi</item>
-        <item >Mumbai</item>
+    <string-array name="state">
+        <item>State</item>
+        <item>Karnataka</item>
+        <item>Delhi</item>
+        <item>Mumbai</item>
     </string-array>
     <string name="title_activity_home">MainActivity</string>
     <string name="title_home">Home</string>
     <string name="title_manage_bids">Manage Bids</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_more_option">More</string>
+    <string name="about_us">About Us</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="under_development">This page is under development</string>
@@ -35,6 +36,8 @@
     <string name="forgot">Forgot Password?</string>
     <string name="reset">Reset</string>
     <string name="login">Login</string>
+    <string name="about_us_title">ABOUT US</string>
+    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident. \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident \nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident </string>
     <string name="login_with">Or Login With</string>
     <string name="have_account">Don’t have an Account?</string>
     <string name="create_account">Create Account</string>
@@ -45,7 +48,7 @@
     <string name="forgot_pass">Enter your email associated with your account and we’ll send a link for your Reset password.</string>
     <string name="submit">Submit</string>
 
-    <string name ="new_password">Your new password must be different from\nprevious used passwords.</string>
+    <string name="new_password">Your new password must be different from\nprevious used passwords.</string>
     <string name="confirm_password">Confirm Password</string>
 
     <string name="update_password">UPDATE PASSWORD</string>
@@ -63,15 +66,6 @@
     <string name="post_code">Post Code</string>
     <string name="set_password">Set Password</string>
     <string name="continuee">Continue</string>
-
-
-
-
-
-
-
-
-
 
 
 </resources>
